slide menu layout on small viewport fixed

--- a/src/sass/sections/_nav.scss
+++ b/src/sass/sections/_nav.scss
@@ -115,7 +115,6 @@
     
     height: 100vh;
     width: 100vw;
-    // finish with javascript
     margin-left: -100vw;
     background-color: $light-grey;
     transition: .4s;
@@ -127,7 +126,7 @@
             color: $white;
             font-family: $primary-font;
             font-size: 48px;
-            padding-left: 120px;
+            padding-left: 24px;
         }
     }
   }
@@ -177,6 +176,13 @@
 }
 
 @media screen and (min-device-width: 1200px) {
+    .sm {
+        li {
+            a {
+                padding-left: 120px;
+            }
+        }
+    }
     .nav-container {
         height: 5vh;
     }
